...
    }
    val botMode: BotMode?
        get() = bot?.mode

    var history by mutableStateOf(listOf(
        TurnState(
            instruction = if (mode == GameMode.SINGLE) SP_MOVE_TEXT else "Player X turn",
            board = grid.cells
        )
    ))

    private var gameState: GameState = history[0].gameState
    private var turn: Player = history[0].turn
...
